--- a/app/src/main/res/layout/activity_create_account.xml
+++ b/app/src/main/res/layout/activity_create_account.xml
@@ -113,8 +113,10 @@
             android:hint="Username"
             style="@style/OpenSansLight"
             android:layout_below="@+id/username_title"
+            android:imeOptions="actionNext"
             android:layout_marginTop="4dp"
             android:maxLines="1"
+            android:id="@+id/create_account_username"
             android:singleLine="true"
 
             />
@@ -174,9 +176,10 @@
             android:layout_height="wrap_content"
             android:hint="Email"
             style="@style/OpenSansLight"
+            android:imeOptions="actionNext"
             android:maxLines="1"
             android:layout_marginTop="4dp"
-
+            android:id="@+id/create_account_email"
             android:singleLine="true"
             />
 
@@ -229,17 +232,14 @@
                 </LinearLayout>
 
         <Model.LimitedEditText
-            android:id="@+id/password"
+            android:id="@+id/create_account_pw"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/prompt_password"
-            android:imeActionId="@+id/login"
-            android:imeActionLabel="@string/action_sign_in_short"
-            android:imeOptions="actionUnspecified"
+            android:imeOptions="actionNext"
             android:inputType="textPassword"
             android:maxLines="1"
             android:layout_marginTop="4dp"
-
             android:singleLine="true"
             style="@style/OpenSansLight"
             android:layout_below="@+id/pw_title"
@@ -292,24 +292,31 @@
                 </LinearLayout>
 
         <Model.LimitedEditText
-            android:id="@+id/password_confirm"
+            android:id="@+id/create_account_pwConfirm"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Password Again"
-            android:imeActionId="@+id/login"
-            android:imeActionLabel="@string/action_sign_in_short"
-            android:imeOptions="actionUnspecified"
+            android:imeActionId="@+id/create_account_next"
+            android:imeOptions="actionDone"
             android:inputType="textPassword"
             android:maxLines="1"
             android:singleLine="true"
             android:layout_marginTop="4dp"
-
             style="@style/OpenSansLight"
             android:layout_below="@+id/pw_confirm_title"
 
             />
 
             </RelativeLayout>
+
+        <Model.CustomCheckBox
+            android:id="@+id/create_account_showPw"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Show Password"
+            android:layout_below="@+id/create_account_pw_confirm_layout"
+            style="@style/OpenSansRegular"
+            />
 
     <Model.CustomButton
         android:id="@+id/create_account_next_btn"
