--- a/app/src/main/res/drawable/circle_white.xml
+++ b/app/src/main/res/drawable/circle_white.xml
@@ -1,16 +1,42 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:shape="oval"
-    >
 
-    <solid
-        android:color="@color/white" />
+<selector xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <stroke
-        android:width="2dp"
-        android:color="@color/text_color"
-        />
+    <item
+        android:state_focused="true"
+        android:state_pressed="false"
+        >
+        <shape android:shape="oval">
+            <solid android:color="@color/text_color" />
+            <stroke android:width="2dp" android:color="@color/text_color" />
+        </shape>
+    </item>
+
+    <item
+        android:state_focused="true"
+        android:state_pressed="true">
+        <shape android:shape="oval">
+            <solid android:color="@color/text_color" />
+            <stroke android:width="2dp" android:color="@color/text_color" />
+        </shape>
+    </item>
+    <item
+        android:state_focused="false"
+        android:state_pressed="true">
+        <shape android:shape="oval">
+            <solid android:color="@color/text_color" />
+            <stroke android:width="2dp" android:color="@color/text_color" />
+        </shape>
+    </item>
+
+    <item>
+        <shape android:shape="oval">
+            <solid android:color="@color/white" />
+            <stroke android:width="2dp" android:color="@color/text_color" />
+        </shape>
 
 
-</shape>
+    </item>
+
+
+</selector>
