--- a/app/src/main/res/layout/fragment_profile_feedback.xml
+++ b/app/src/main/res/layout/fragment_profile_feedback.xml
@@ -1,15 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v4.widget.SwipeRefreshLayout
-    android:id="@+id/profile_feedback_swipe_refresh_layout"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    xmlns:android="http://schemas.android.com/apk/res/android">
-
 <LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+
+    <android.support.v4.widget.SwipeRefreshLayout
+        android:id="@+id/profile_feedback_swipe_refresh_layout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        >
 
 
     <Model.EmptyRecyclerView
@@ -20,12 +21,11 @@
         android:background="@color/darkwhite"
         />
 
-    <ScrollView
-        android:id="@+id/profile_feedback_emptyView"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
+    </android.support.v4.widget.SwipeRefreshLayout>
+
 
     <LinearLayout
+        android:id="@+id/profile_feedback_emptyView"
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -46,8 +46,6 @@
             android:layout_marginBottom="16dp"
             />
     </LinearLayout>
-    </ScrollView>
 
 
 </LinearLayout>
-</android.support.v4.widget.SwipeRefreshLayout>
